# Yeliztli

./: .gitignore  CHANGELOG.md  NOTICE  README.md  mkdocs.yml  pyproject.toml  vulture_whitelist.py
.github/workflows/: ci.yml  docs.yml
backend/: config.py  disclaimers.py  main.py
backend/analysis/: acmg.py  allele_match.py  allergy.py  alphamissense.py  ancestry.py  apoe.py  array_confidence.py  bche.py  breast_absolute_risk.py  cancer.py  cancer_prs.py  cardiovascular.py  carrier_status.py  clinvar_significance.py  ebmd_prs.py  evidence.py  finding_diff.py  finding_gate.py  fitness.py  g6pd.py  gene_constraint.py  gene_health.py  gene_validity.py  genotype_lookup.py  gtex.py  inheritance.py  lai.py  lai_runner.py  metabolic_prs.py  methylation.py  nutrigenomics.py  pgs_bridge.py  pgx_guidelines.py  pharmacogenomics.py  provenance.py  prs.py  prs_calibration.py  rare_variant_finder.py  risk_genotype.py  run_all.py  (+5 more)
backend/annotation/: alphamissense.py  clingen.py  clinvar.py  cpic.py  dbnsfp.py  dbsnp.py  engine.py  evidence_conflict.py  gnomad.py  gnomad_constraint.py  gtex_eqtl.py  gwas.py  http_download.py  insilico_axes.py  pgs_catalog.py  vep_bundle.py
backend/api/: dependencies.py
backend/db/: build_guard.py  connection.py  database_registry.py  db_health.py  download_manager.py  manifest.py  reference_schema.py  sample_schema.py  tables.py  update_manager.py
backend/ingestion/: dispatcher.py  liftover.py  parser_23andme.py  parser_ancestrydna.py  vcf_export.py
backend/query/: translator.py
backend/reports/: fhir_export.py  generator.py  module_disclaimers.py  variant_card.py
backend/services/: sex_inference.py
backend/tasks/: huey_tasks.py
backend/utils/: update_checker.py
bundles/: manifest.json
docs/: ancestry-methods.md  attribution.md  bundle-release-runbook.md  expansion-second-wave-REMAINING.md  external-inputs-strategy.md  index.md  intended-use.md  lai-bundle-release-runbook-env.lock.yaml  lai-bundle-release-runbook.md  privacy.md  setup-guide.md
docs/_includes/: health-disclaimer.md
docs/develop/: architecture.md  contributing.md  development-setup.md  index.md  project-structure.md  testing.md
docs/getting-started/: multi-sample-merging.md  reading-your-results.md  upload-your-dna.md
docs/install/: backup-restore.md  configuration.md  docker.md  index.md  native-install.md  reference-data.md  setup-wizard.md  system-requirements.md  troubleshooting.md  uninstall.md  updating.md  wsl2.md
docs/internal/: expansion-second-wave-REMAINING.md  sex_inference_threshold_validation.md
docs/maintainer/: index.md  lai-bundle.md  release-process.md
frontend/: knip.jsonc  package-lock.json  package.json
frontend/src/: App.tsx
graphify-out/: .gitignore  .graphify_labels.json  GRAPH_REPORT.md
scripts/: build_pmid_metadata_snapshot.py  derive_cancer_prs_reference.py  preflight_bundle_v2.sh  validate_sex_thresholds.py
scripts/lai_bundle_v2/: run_rebuild_slurm.sh
tests/backend/: citation_provenance.py  test_acmg.py  test_acmg_api.py  test_admin_api.py  test_allele_match.py  test_allergy.py  test_allergy_api.py  test_allergy_panel.py  test_alpha1.py  test_alpha1_api.py  test_alphamissense.py  test_amd.py  test_ancestry.py  test_annotation_engine.py  test_annotations_api.py  test_apoe.py  test_apoe_gate_api.py  test_apol1.py  test_array_confidence.py  test_auth.py  test_bche.py  test_benchmark.py  test_breast_absolute_risk.py  test_build_guard.py  test_cancer.py  test_cancer_analysis.py  test_cancer_prs.py  test_cardiovascular.py  test_carrier_analysis.py  test_carrier_disclaimer_api.py  test_carrier_panel.py  test_categorical_panel_strand.py  test_citation_provenance.py  test_citation_provenance_guard.py  test_citation_topic_consistency.py  test_clingen_ingestion.py  test_clinvar.py  test_clinvar_significance.py  test_config.py  test_consequence_selector.py  (+127 more)
tests/e2e/: allergy-hla-proxy.spec.ts  ancestry-ranking-label.spec.ts  carrier-ad-label.spec.ts  categorical-indeterminate.spec.ts  clinvar-combined-significance.spec.ts  cross-browser.spec.ts  merge-samples.spec.ts  (+19 more)
(+278 files in other folders)
