[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yeliztli"
version = "0.2.0"
description = "Personal genomics analysis platform for 23andMe and AncestryDNA raw data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "bioedca", email = "bioedca@gmail.com" },
]

dependencies = [
    "fastapi",
    "starlette",
    "python-multipart",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "huey",
    "httpx",
    "structlog",
    "bcrypt",
    "packaging",
    "pyliftover",
    "biopython",
    "numpy",
    "scipy",
    "plotly",
    "jinja2>=3.0",
    "playwright>=1.40",
    "pysam>=0.22",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    # Pinned: ruff's formatter output can change across releases; an exact pin
    # keeps `ruff format --check` deterministic between local and CI (bump
    # intentionally + reformat the tree in the same PR).
    "ruff==0.15.15",
    "mypy",
    "pyyaml",
    "pandas",
    # Python dead-code detector (#579). ruff (E/F/I/UP) flags unused locals and
    # imports but NOT unused module-level constants/functions/methods; vulture
    # closes that blind spot. Config + baseline live in [tool.vulture] +
    # vulture_whitelist.py.
    "vulture",
]
# Documentation site (MkDocs Material). Install with `pip install -e ".[docs]"`
# — used locally, by the `docs-build` CI job, and by the Pages deploy workflow.
docs = [
    "mkdocs-material",
    "pymdown-extensions",
]

[project.scripts]
yeliztli-setup = "backend.installer:main"

[project.urls]
Homepage = "https://github.com/bioedca/Yeliztli"
Repository = "https://github.com/bioedca/Yeliztli"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# Python dead-code detector (#579) — the backend counterpart to the frontend
# knip gate (#555). ruff cannot see unused module-level constants/functions, so
# they ship CI-invisible (the #527/#535/#553/#561 cluster). vulture closes that
# gap. ``tests``/``scripts`` are analysed alongside ``backend`` so a backend
# symbol referenced only by a test counts as used (not a false positive).
# ``vulture_whitelist.py`` is a reviewed baseline that suppresses framework
# dynamic references (FastAPI/Huey/Pydantic/SQLAlchemy/dataclasses) AND the
# current per-symbol dead-code backlog; trim its entries as those issues close.
# Run locally with: ``vulture`` (reads this config) or regenerate the baseline
# with ``scripts/make_vulture_whitelist.sh``.
[tool.vulture]
paths = ["backend", "tests", "scripts", "vulture_whitelist.py"]
min_confidence = 60
ignore_decorators = [
    "@router.get",
    "@router.post",
    "@router.put",
    "@router.delete",
    "@router.patch",
    "@huey.task",
    "@huey.periodic_task",
    "@field_validator",
    "@model_validator",
    "@app.exception_handler",
    # pytest fixtures/marks are invoked by the framework, not called directly, so
    # vulture sees them as unused (e.g. an `@pytest.fixture(autouse=True)` helper).
    # Without this, a newly-added fixture reddens the blocking vulture check on
    # main for the whole fleet (#684 omitted it). The glob covers @pytest.fixture
    # and parameterized marks (vulture simplifies @pytest.mark.x(...) → @pytest.mark).
    "@pytest.*",
]
sort_by_size = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end tests",
    "integration: marks integration tests",
    "requires_java: marks tests that need a real Java runtime (skipped when unavailable)",
    "requires_real_bundle: marks tests that need the real production LAI/VEP bundle on disk (skipped when absent; consumed by the nightly slow-tier workflow)",
]
